fix: case study covers causing horizontal scrolling on mobile

--- a/_sass/_images.scss
+++ b/_sass/_images.scss
@@ -56,6 +56,7 @@
   .cover {
     background-color: $color-neutral-1;
     border-radius: 9px;
+    box-sizing: border-box;
     padding: 12px;
   }
 }
